--- a/rpc/etc/core.yaml
+++ b/rpc/etc/core.yaml
@@ -1,6 +1,17 @@
 Name: core.rpc
 ListenOn: 0.0.0.0:9101
 
+DatabaseConf:
+  Type: mysql
+  Host: 127.0.0.1
+  Port: 3306
+  DBName: resource_manger
+  Username: resource-manger-admin
+  Password: Pzq04196666!
+  MaxOpenConn: 100
+  SSLMode: disable
+  CacheTime: 5
+
 MongoDBConf:
   Protocol: mongodb
   Credentials: "27017"
